Progress on NearLocation relation

--- a/report/Design/design.tex
+++ b/report/Design/design.tex
@@ -11,11 +11,11 @@
     \graphicspath{{Design/DesignFigs/EPS/}{Design/DesignFigs/}}
 \fi
 
-This chapter gives a brief overview of the features and classes of poetry that exist, along with why people are interested in writing them. We will discuss, critique and gather inspiration from the related work in the area of poetry generation that most relate to the approach taken in this paper. We then give brief overviews into the fields of Computational Linguistics and Computational Creativity, both of which are involved in the task of automatic poetry generation. These overviews are by no means complete or comprehensive, but should provide enough information for those not familiar with those areas to understand and appreciate this paper.
+This chapter gives a brief overview of the features and classes of poetry that exist, along with why people are interested in writing them. We will discuss, critique and gather inspiration from the related work in the area of poetry generation that most relate to the approach taken in this paper. We then give brief overviews into the fields of Computational Linguistics and Computational Creativity, both of which are involved in the task of automatic poetry generation. These overviews are by no means complete or comprehensive, but should provide enough information for those not familiar with the areas to understand and appreciate this paper.
 
 \section{Poetry Theory}
 
-To fully appreciate the task that we are about to undertake, we need to have an understanding of poetry as an art form. Poetry is believed to predate even literacy and has been documented ever since. Over the ages, different styles of poetry have evolved. Here we discuss those styles and the underlying reason for why poetry is written.
+To fully comprehend the task that we are about to undertake, we need to have an understanding of poetry as an art form. Poetry is believed to predate even literacy and has been documented ever since. Over the ages, different styles of poetry have evolved. Here we discuss those styles and the underlying reason for why poetry is written.
 
 \subsection{The Purpose of Poetry}
 
@@ -161,10 +161,10 @@ Stanzas can also be called \textit{verses}, which have the added property of a r
 
 Features of the structure of a poem include:
 \begin{itemize}
-\item{The number of stanzas}
-\item{The number of lines per stanza}
-\item{The number and positions of repeated lines}
-\item{The number and positions of repeated stanzas}
+\item{The number of stanzas.}
+\item{The number of lines per stanza.}
+\item{The number and positions of repeated lines.}
+\item{The number and positions of repeated stanzas.}
 \end{itemize} 
 
 The Haiku in Figure \ref{fig:haiku} has a single tercet structure with no repetitions. Songs are generally several stanzas long, with a chorus interleaving longer non-repeating verses.
@@ -178,7 +178,7 @@ The Haiku in Figure \ref{fig:haiku} has a single tercet structure with no repeti
 \item{Ties several thoughts together into one continuous flow.}
 \end{itemize} 
 
-We concentrate on detecting and reproducing accurate structures of common poetry in this project.
+We concentrate on detecting and reproducing accurate structures of common poetry types in this project.
 
 \subsubsection{Symbolism and Imagery}
 Symbolism and imagery are general terms for creating an overall image in the reader's mind by describing a subject or object as something else with desired qualities.
@@ -210,7 +210,7 @@ Context is the underlying message in its bare form. It is the story that the poe
 In this paper, we aim to extract characters and differentiate them by their descriptions and actions. This is vital in understanding the poem and can help us generalise the uses of features when attempting to produce a coherent story as the backbone to the generated poem. Furthermore, it will help determine the type of poem (narrative, lyrical, descriptive etc.) and will help guide generation of poems of a particular type. 
 
 \subsubsection{Theme}
-Theme is a very abstract term that is difficult to define. It can be thought of as the worldly context of the poem, often requiring better understanding and background knowledge of the poet. For example, Maya Angelou's \textit{I Know Why The Caged Bird Sings} is about oppression of African Americans during the time that she was alive. It was were way of helping readers empathise with her situation, by personifying a caged bird and the similarities she shares with it. The theme is therefore \textit{oppression}. However, without knowing Angelou's life situation, it would have been impossible to determine.
+Theme is a very abstract term that is difficult to define. It can be thought of as the worldly context of the poem, often requiring better understanding and background knowledge of the poet. For example, Maya Angelou's \textit{I Know Why The Caged Bird Sings} is about oppression of African Americans. It was her way of helping readers empathise with her situation, by personifying a caged bird and the similarities she shares with it. The theme is therefore \textit{oppression}. However, without knowing Angelou's life situation, it would have been impossible to determine.
 
 Theme is beyond the scope of this project, both in interpretation of poetry and generation. However, we will attempt themes that can be summarised into a single word, which we will refer to as \textit{topics}. For example, we will try to emulate the styles of \textit{Love} poems or \textit{War} poems from given examples. This will help give more meaning to the features described here and help in using them in the right context during the generation phase.
 
@@ -250,7 +250,7 @@ Some of these poems are harder to read and generate than others, particularly in
 
 
 \section{Lessons from Related Work}
-This section looks at six important previous attempts at automatic poetry generation. They each have some aspect of investigation or experimentation that we have learned from and have influenced this project. However, each of these attempts has its limitations that we look to overcome in this project.
+This section looks at six important previous attempts at automatic poetry generation. They each have some aspect of investigation or experimentation that have influenced this project. However, each of these attempts has its limitations that we look to overcome in this project.
 
 \subsection{Actively Gather Inspiration}
 
@@ -317,11 +317,11 @@ An anthem in the judgements after verse!
 \label{fig:con2}
 \end{figure}
 
-The idea that constraints do not hinder but rather help the creative process is an attractive one for computational creativity research. Constraining words and other requirements for each particular word position is a natural technique for constraint programming, but extremely restrictive. First, the size of each line must be defined by number of words \textit{and then} by rhythm and other poetic features. Secondly, once the candidate words are chosen there is no scope for further filtering. Finally, the structure of the poem in terms of its POS must be defined beforehand and is taken from previous poems of the same type, as seen in Figure \ref{fig:con2}. Even though this is an efficient method that has produced impressive results, it is too restricted to produce truly creative work.
+The idea that constraints do not hinder but rather help the creative process is an attractive one for Computational Creativity research. Constraining words and other requirements for each particular word position is a natural technique for constraint programming, but extremely restrictive. First, the size of each line must be defined by number of words \textit{and then} by rhythm and other poetic features. Secondly, once the candidate words are chosen there is no scope for further filtering. Finally, the structure of the poem in terms of its parts-of-speech (section \ref{sec:syntax}) tags must be defined beforehand and is taken from previous poems of the same type, as seen in Figure \ref{fig:con2}. Even though this is an efficient method that has produced impressive results, it is too restricted to produce truly creative work.
 
 \subsection{Learn from Experience}
 
-Ray Kurtzweil Cybernetic Poet (RKCP), created by Kurtzweil himself\cite{kurzweil1999ray}, addresses the issue of having a predefined template. He uses a stochastic approach that takes advantage on n-grams to build lines from words. The system was trained on a selection of poems and created a template and n-gram corpus from those poems. RKCP would then be able to create similar types of poems. Algorithms were employed to ensure that poems were not exact copies of other poems and to maintain a coherent theme.
+Ray Kurtzweil Cybernetic Poet (RKCP), created by Kurtzweil himself\cite{kurzweil1999ray}, addresses the issue of having a predefined template. He uses a stochastic approach that takes advantage of n-grams to build lines from words. The system was trained on a selection of poems and created a template and n-gram corpus from those poems. RKCP would then be able to create similar types of poems. Algorithms were employed to ensure that poems were not exact copies of other poems and to maintain a coherent theme.
 
 \begin{figure}[h!]
 \centering
@@ -339,7 +339,7 @@ This method is more flexible and has granular word selection. However, the vocab
 
 \subsection{Choose Words Carefully}
 \label{sec:mcg}
-MCGONAGALL\cite{manurung2004evolutionary} takes a flat semantic representation of what he calls semantic expressions as input into an NLG system. For example, the semantic expression of \textit{"John loves Mary"} would be\\ \textit{\{john(j), mary(m), love(l, j, m)\}}
+MCGONAGALL\cite{manurung2004evolutionary} takes a semantic representation of a sentence, called \textit{semantic expressions}, as input into an NLG system. For example, the semantic expression of \textit{"John loves Mary"} would be \textit{\{john(j), mary(m), love(l, j, m)\}}
 
 These are used as starting points for initialisation of his evolutionary system that uses stochastic methods to determine the best values to be carried forward to further iterations.
 
@@ -359,11 +359,11 @@ he dwells in a child with a fish.\\
 \begin{figure}[h!]
 \centering
 \includegraphics[width=100mm]{lion}
-\caption{Semantically enriched lexical entry for \textit{lion}}
+\caption{Semantically enriched lexical entry for \textit{lion} in MCGONNAGAL}
 \label{fig:lion}
 \end{figure}
 
-Of particular note is the structure of a lexical entry into the system. It is enriched with much semantic information, as in Figure \ref{fig:lion} that backs up the fitness score and helps MCGONAGALL form syntactically and semantically correct sentences. We will use much of his work in this area. However, pragmatism is still lacking because of the restrictions on evolution. It does not take particular types of poetry into account and there is little scope for creativity due to the strictness of grammar generated. 
+Of particular note is the structure of a lexical entry into the system. It is enriched with much semantic information, as in Figure \ref{fig:lion}, that backs up the fitness score and helps MCGONAGALL form syntactically and semantically correct sentences. We will use much of his ideas in this area. However, pragmatism is still lacking because of the restrictions on evolution. It does not take particular types of poetry into account and there is little scope for creativity due to the strictness of grammar generated. 
 
 
 \subsection{Derive Insight from Worldly Knowledge}
@@ -393,7 +393,7 @@ His methods have obvious limitations in that they do not consider rhyme, rhythm 
 \subsection{Dare to be Different}
 WASP is one of the first attempts at an automatic poetry generator. It is a rule based system that takes a set of words, a set of verse patterns and returns a set of verses\cite{gervas2000wasp}. It uses heuristics to guide the construction to fit structure, but no semantic limitations are enforced.
 
-This has obvious limitations but Gervas does make a good point that poetry's creativeness is somewhat down to daringness of transgression. We keep this in mind to allow some level of randomness and mutation from expected norms in this project. 
+This has obvious limitations but Gervas, the creator of this system, does make a good point that poetry's creativeness is somewhat down to daringness of transgression. We keep this in mind to allow some level of randomness and mutation from expected norms in this project. 
 
 %https://www.era.lib.ed.ac.uk/bitstream/1842/314/1/IP040022.pdf
 %All in docs
@@ -409,12 +409,12 @@ In the context of Automatic Poetry Generation, we are creating a system that is 
 
 This definition has evolved from one where behaviour was \textit{deemed creative if exhibited by humans}\cite{wiggins2006searching}. However, recent developments in the area have lead to the requirement of more quantitative measures for evaluation than Turing-style tests, such as the FACE and IDEA descriptive models\cite{colton2011computational}.
 
-This area of research has come under scrutiny for philosophical reasons, but has had support from Alan Turing and other pioneers of Artificial Intelligence\cite{}. It has since been accepted as a valid area of research, with the annual International Conference on Computational Creativity heading into its fifth round.
+This area of research has come under scrutiny for philosophical reasons, but has had support from Alan Turing and other pioneers of Artificial Intelligence. It has since been accepted as a valid area of research, with the annual International Conference on Computational Creativity heading into its fifth round.
 
 Successes of Computational Creativity:
 \begin{itemize}
 \item{Simon Colton's \textit{Painting Fool}\cite{colton2012painting} produced paintings that managed to trick art lovers into believing that it was the work of a talented human artist. An example is given in Figure \ref{fig:chair}.}
-\item{\textit{JAPE}\cite{binstead1997computational}, created by Ritchie and Binsted in 1994 was given a general, non-humorous lexicon and generated puns as answers to questions. For example:\\\textit{Q:What do you call a strange market?\\ A: A bizarre bazaar}}
+\item{\textit{JAPE}\cite{binsted1997computational}, created by Ritchie and Binsted in 1994 was given a general, non-humorous lexicon and generated puns as answers to questions. For example:\\\textit{Q:What do you call a strange market?\\ A: A bizarre bazaar}}
 \item{\textit{Iamus} by Gustavo Diaz-Jerez\cite{diaz2011composing}, which composed music entirely on its own that was then recorded by London Symphony Orchestra}
 \item{\textit{The Policeman's Beard is Half Constructed}\cite{chamberlain1984policeman} is recognised for being the first book, which included some poetry, to have been written entirely by a computer program, RACTER.}
 \end{itemize} 
@@ -431,26 +431,27 @@ Successes of Computational Creativity:
 \section{Brief Overview of Computational Linguistics}
 Computational Linguistics is a wide area of research, covering Speech Recognition, Natural Language Processing and Generation and with overlaps in several other areas such as Machine Learning and Knowledge Representation. In fact, Daniel Jurafsky and James H. Martin needed almost a thousand pages to cover the foundations of this area\cite{jurafsky2000speech}.
 
-Automatic Poetry Generation uses many lessons from Computational Linguistics. Here we will briefly discuss the major ones in general and in the context of machine poetry analysis and generation. For an in depth general study of Computational Linguistics, we refer the interested reader to \cite{jurafsky2000speech}
+Automatic Poetry Generation uses many lessons from Computational Linguistics. Here we will briefly discuss the major ones in general and in the context of machine poetry analysis and generation. For an in depth general study of Computational Linguistics, we refer the interested reader to Jurafsky and Martin's book.
 %http://www.cse.iitk.ac.in/users/mohit/Speech-and-Language-Processing.pdf
 
 \subsection{Words}
-Words are the fundamental building blocks of language. They have been studied for creation of spell-checkers, text-to-speech synthesis and automatic speech recognition. Two major subsets that we are concerned with in poetry is the study of pronunciation and morphology. 
+Words are the fundamental building blocks of language. They have been studied for creation of spell-checkers, text-to-speech synthesis and automatic speech recognition. Two major subsets where poetry is concerned is the study of pronunciation and morphology. 
 
-The CMU Pronunciation Dictionary\cite{weide1998cmu} has taken the first steps towards computationally modeling the phonetics of words. It uses the ARPAbet phoneme set (see Table \ref{tab:arpa} in the appendix) is highly important for poetry generation as it helps machines reason about rhyme and sound devices by simply comparing phonemes. It has over 133,000 words mapped to its corresponding pronunciation.
+The CMU Pronunciation Dictionary\cite{weide1998cmu} has taken the first steps towards computationally modelling the phonetics of words. It uses the ARPAbet phoneme set (see Table \ref{tab:arpa} in the Appendix) is highly important for poetry generation as it helps machines reason about rhyme and sound devices by simply comparing phonemes. It has over 133,000 words mapped to its corresponding pronunciation.
 
-To illustrate how this works, let us take two words that are spelled differently but pronounced the same - \textit{kite} and \textit{height}. The Jaro-Winkler distance, a normalised score of similarity between strings, for the tail of these words (in search of rhyme) gives 51.11\%, indicating that it would be difficult for a machine to realise that they rhyme if it only looked at spelling. Their corresponding phoneme sets are \textit{'K AY T'} and \textit{'HH AY T} respectively. Now it is trivial to compare them and see that the tails are exactly the same and therefore rhyme.
+To illustrate how this works, let us take two words that are spelled differently but pronounced the same - \textit{kite} and \textit{height}. The Jaro-Winkler distance, a normalised score of similarity between strings, for the tail of these words (in search of rhyme) gives 51.11\%, indicating that it is barely probable that they rhyme if we only looked at spelling. Their corresponding phoneme sets are \textit{'K AY T'} and \textit{'HH AY T} respectively. Now it is trivial to compare them and see that the tails are exactly the same and therefore rhyme.
 
-Morphology of words is the study of putting words together with morphemes, the smallest unit of grammar. To use Jarufsky and Martin's example[ref page 59], the word \textit{fox} consists of a single morpheme that is itself, but \textit{cats} has two morphemes, \textit{cat} and \textit{-s}. This is of vital importance in our project as we need to understand the difference between different forms of the same word and how they relate to context. Furthermore, when generating text we wish to produce coherent grammar with consistent tense and perspective.
+Morphology of words is the study of putting words together with morphemes, the smallest unit of grammar. To use Jarufsky and Martin's example, the word \textit{fox} consists of a single morpheme that is itself, but \textit{cats} has two morphemes, \textit{cat} and \textit{-s}. This is of vital importance in our project as we need to understand the difference between different forms of the same word and how they relate to context. Furthermore, when generating text we wish to produce coherent grammar with consistent tense and perspective.
 
 The CLiPS Pattern library has a number of tools for morphology of words. It provides a method of changing a word into its first, second or third person version, pluralisation and finding superlatives.\cite{de2012pattern}
 
 %http://delivery.acm.org/10.1145/980000/972475/p313-marcus.pdf?ip=82.31.135.169&id=972475&acc=OPEN&key=BF13D071DEA4D3F3B0AA4BA89B4BCA5B&CFID=397642531&CFTOKEN=69509660&__acm__=1390858444_560bb7766479576772371b53b664bc15
 
 \subsection{Syntax}
+\label{sec:syntax}
 Syntax is the glue that binds words together. It gives us an understanding of the grammatical relationship between words and guides the building of phrases and sentences.
 
-Core to this area of research is \textit{part-of-speech (POS)} analysis, which provides a model for grouping words together correctly, taking into account how words depend on each other. The big success story in this is The Penn Treebank, an enormous corpus of annotated POS information \cite{marcus1993building}. The full tagset is given in Table \ref{tab:penn} in the APPENDIX. Indeed this accelerated progress of research in the area, as the paper had planned. 
+Core to this area of research is \textit{part-of-speech (POS)} analysis, which provides a model for grouping words together correctly, taking into account how words depend on each other. The big success story in this area is The Penn Treebank Tagset, an enormous corpus of annotated POS information \cite{marcus1993building}. The full tagset is given in Table \ref{tab:penn} in the APPENDIX. This accelerated progress of research in the area, as the paper had expected. 
 
 From these POS tags, we are able to create \textit{grammars}, the structural rules of phrases and sentences, and \textit{parsers} for those grammars to be able to extract grammatical structure from unstructured text.
 
@@ -463,41 +464,40 @@ For example, the phrase \textit{John loves Mary} would be represented as in Figu
 \label{fig:parse}
 \end{figure}
 
-Python's Natural Language Toolkit (NLTK)\cite{bird2009natural} is a suite of text processing libraries, corpora and lexical resources that is heavily used in this project, particularly for syntactical purposes. It will allow us to use The Penn Treebank tags as well as produce our own grammar and parser that can be used to parse most poetry. This is a challenge because poetry does not follow grammatical rules as strictly as discourse. However, the gains will be that we can model the context of the poem, leading to better analysis of semantics and pragmatics of poetry.
+Python's Natural Language Toolkit (NLTK)\cite{bird2009natural} is a suite of text processing libraries, corpora and lexical resources that is heavily used in this project, particularly for syntactical purposes. It will allow us to use The Penn Treebank tags as well as produce our own grammar and parser that can be used to parse most poetry. This is a challenge because we cannot expect poetry to follow grammatical rules as strictly as discourse. However, the pay-off will be that we can model the context of the poem, leading to better analysis of semantics and pragmatics of poetry.
 %http://www.postgradolinguistica.ucv.cl/dev/documentos/49,578,Noam%20Chomsky%20-%20Syntactic%20Structure.pdf
 
 \subsection{Semantics and Pragmatics}
-Chomsky used the famous example 'Colorless green ideas sleep furiously' to show that a valid grammatical syntax can be completely nonsensical\cite{chomsky2002syntactic}. This illustrates the importance of the study of semantics, the meaning of words and phrases, as well as pragmatics, the way context affects semantics.
+Chomsky used the famous example \textit{'Colourless green ideas sleep furiously'} to show that a valid grammatical syntax can be completely nonsensical\cite{chomsky2002syntactic}. This illustrates the importance of the study of semantics, the meaning of words and phrases, as well as pragmatics, the way context affects semantics. Suppose the context around Chomsky's example was a person with old (black-and-white, colourless) ideas of making money (green) that he wants to bring back (was put to sleep, but not peacefully), then this line would make some sense in a poetic way.
 
-This is yet another major challenge for poetry generation. Poems are concise but have many layers of meaning that are subtle even to human readers and that only the best of poets can fully control. The different categories of poems each have their own pragmatics and there is always a fundamental message and purpose supporting these layers meaning.
+This is yet another major challenge for poetry generation. Poems are concise but have many layers of meaning that are subtle even to human readers and that only the best of poets can fully control. The different categories of poems each have their own pragmatics and there is always a fundamental message and purpose supporting these layers meaning. Veale argues that 'poetic licence' is not a licence but a contract that allows a speaker to take liberties in language in exchange for real insight\cite{veale2013less}. We must be careful not to abuse this by slewing unrelated words together and expecting the reader to do the work of finding meaning and context.
 
-If Chomsky's example were a line in a poem, a determined reader might read into this as old, locked-away, thoughts of monetary greed threatening to return. Or perhaps a completely different interpretation may arise depending on the reader.  Veale argues that this 'poetic licence' is not a licence but a contract that allows a speaker to take liberties in language in exchange for real insight\cite{veale2013less}. We must be careful not to abuse this by slewing unrelated words together and expecting the reader to do the work.
+Various methods of understanding semantics in natural language have been proposed. A very popular one is First Order Logic. In particular, Hans Kamp proposes Discourse Representation Theory (DRT) as a way of modelling language in such a way. We use this theory in this project and will go into more depth in the next section.
 
-Various methods of understanding semantics in natural language have been proposed. A very popular one is First Order Predicate Calculus. In particular, Hans Kamp proposes Discourse Representation Theory (DRT) as a way of modelling language in such a way. We use this theory in this project and will go into more depth in the next section.
-
-Johan Bos proposes that semantic analysis of text is where syntax analysis was 20 years ago, before The Penn Treebank \cite{}. He and his team have begun the Groningen Meaning Bank (GMB) project\cite{BasileBosEvangVenhuizen2012LREC}, a large semantically annotated corpus in lieu of The Penn Treebank, in the attempt to bring the same success and acceleration to this research field. They use DRTas the backbone to an assembly of third-party tools to annotate semantics, as can be seen in Figure \ref{fig:gmb}.
+Johan Bos and his team have begun the Groningen Meaning Bank (GMB) project\cite{BasileBosEvangVenhuizen2012LREC}, a large semantically annotated corpus in lieu of The Penn Treebank, in the attempt to bring the same success and acceleration to this sub-field of research. They use DRT as the backbone to an assembly of third-party tools to annotate semantics, as can be seen in Figure \ref{fig:gmb}.
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=100mm]{Groningen}
+\includegraphics[width=125mm]{Groningen}
 \caption{Semantic structure of the sentence \textit{Smoking causes diseases.}}
 \label{fig:gmb}
 \end{figure}
 
-However, the GMB project is still in early stages and has only annotated open license news articles up until now, which is not a suitable corpus for poetry generation. However, we will support the coordination of third-party tools and will consider using the following to boost the semantic and pragmatic skill of our poetry generator, particularly with regards to the problem of producing vivid imagery and pragmatic parsing:
+However, the GMB project is still in early stages and has only annotated open license news articles up until now, which is not a suitable corpus for poetry generation. However, we will support the coordination of third-party tools and will consider using the following to boost the semantic and pragmatic skill of our poetry generator, particularly with regards to the problem of producing vivid imagery and pragmatic parsing.
 \begin{itemize}
 \item{\textit{WordNet}: a lexical database that provides hierarchical, conceptual-semantic and lexical relations of 155,287 English words.\cite{miller1995wordnet}}
 \item{\textit{VerbNet}: a lexical database that groups verbs by semantic and syntactic linking behaviour.\cite{schuler2005verbnet}}
 \item{\textit{FrameNet}: a lexicon with framing semantics to define and constrain the building of phrases around individual words.\cite{baker1998berkeley}}
-\item{\textit{ACE}: a classification of Named Entity Recognition.\cite{doddington2004automatic}}
+\item{\textit{ACE}: a classification of names, places and other proper nouns for Named Entity Recognition.\cite{doddington2004automatic}}
 \item{\textit{PropBank}: an annotated corpus a million words defining and providing argument role labels for verbs\cite{kingsbury2002treebank}}
 \item{\textit{NomBank}: similar to PropBank, but for nouns instead of verbs.\cite{meyers2004nombank}}
-\item{\textit{Wordnik}: a multi-faceted dictionary and semantic language database collected from a variety of sources\cite{}}
+\item{\textit{Wordnik}: a multi-faceted dictionary and semantic language database collected from a variety of sources\cite{wordnik}}
 \item{\textit{Metaphor Magnet}: a web application that maps commonplace metaphors in everyday texts\cite{vealespecifying}}
 \item{\textit{Oxford Collocations Dictionary}: a source of word pairings and phrases that occur with greater than chance probability\cite{crowther2003oxford}}
+\item{\textit{University of South Florida Free Association Norms}, a database of various types of word associations\cite{nelson2004university}}
 \item{\textit{LinguaTools DISCO}: a tool to derive semantic similarity between words based on statistical analysis of large text collections\cite{kolb2008disco}}
 \item{\textit{ConceptNet 5}: a semantic general knowledge network\cite{liu2004conceptnet}}
-\item{\textit{Written Sound}: a dictionary of onomatopoeia to their meanings and associated objects\cite{}}
+\item{\textit{Written Sound}: a dictionary of onomatopoeia to their meanings and associated objects\cite{onomat}}
 \end{itemize}
 
 Not all of these tools will be used in this project due to the limited scope. The selected few will be justified in the implementation section with regards to meeting the objectives of this paper. Others will be suggested for future extensions to this project.
@@ -508,7 +508,7 @@ Not all of these tools will be used in this project due to the limited scope. Th
 \label{sec:drt}
 Discourse Representation Theory (DRT)\cite{kamp1993discourse} is a framework for investigating semantics of natural language. DRT is becoming the accepted theory of meaning representation\cite{BasileBosEvangVenhuizen2012LREC}\cite{blackburn2008computational} and is fundamental to the task of semantic modelling of natural language.
 
-Abstract mental representations of DRT are Discourse Representation Structures, or DRS. It is designed to be language neutral and combine meaning across sentences and coping with anaphora (e.g. pronouns in place of nouns). 
+Abstract mental representations of DRT are Discourse Representation Structures (DRSs). It is designed to be able to combine meaning across sentences and cope with anaphora (e.g. pronouns in place of nouns). 
 
 Using Kamp's example, if we take the sentence \textit{A farmer owns a donkey} and convert it into a DRS, we get the following notation:\\
 \textit\{[x,y: farmer(x), donkey(y), own(x,y)]\}
@@ -526,7 +526,7 @@ This method has evolved over the years to take tense and aspect into account, pr
 Extending this example, we may wish to model the sentence \textit{Every farmer who owns a donkey beats it.}. DRT provides an elegant solution for this using first order logic style 'for all':\\
 \textit\{[x][y][farmer(x), donkey(y), own(x,y) -\textgreater beat(x,y)]\}
 
-This allows us to provide background knowledge to the system and make inferences on it. As a result of its usefulness in many applications, NLTK has included DRS manipulation and anaphora resolution into its core 'Sem' package. 
+This allows us to provide background knowledge to the system and make inferences on it. As a result of its usefulness in many applications, NLTK has included DRS manipulation and anaphora resolution into its core 'sem' package. 
 
 In poetry, like any text, we can use this to analyse the semantics and pragmatics of the storyline. Furthermore, we hypothesis that it can be used to model each poetry type since they each have their own forms and purposes, and provide coherency to the story when generating text.
 %http://aclweb.org/anthology/W/W11/W11-2819.pdf
@@ -550,9 +550,9 @@ A similar model was propsed by Bateman and Zock\cite{mitkov2003oxford}, which in
 \item{\textit{Physical Presentation:} Final articulated text is presented.}
 \end{enumerate}
 
-These are theories upon which natural language generation tools, such as simpleNLG\cite{gatt2009simplenlg} have been designed. There are others, such as grammar generation implemented by NLTK (similar to the one used in MCGONNAGAL) or the constraint programming technique used by Toivanen et al. explained in section \ref{sec:con}, but we find that this process is not granular enough, jumping from the goal to the surface text without enough consideration for the individual words used.
+These are theories upon which natural language generation tools, such as simpleNLG\cite{gatt2009simplenlg}, have been designed. There are others, such as grammar generation implemented by NLTK (similar to the one used in MCGONNAGAL) or the constraint programming technique used by Toivanen et al. explained in section \ref{sec:con}, but we find that this process is not granular enough, jumping from the goal to the surface text without enough consideration for the individual words used.
 
-The inputs into this system can vary. One popular problem is raw numerical data into a textual summary. In our case, however, we look at symbolic representations of content in the form of a DRS. Basile and Bos argue that DRSs are appropriate for all stages of the Bateman and Zock example\cite{basile2011towards}. Gardent and Kow have also proposed a symbolic approach to the Surface Realisation phase, working from first-order logic as the input form.
+The inputs into this system can vary. One popular problem is raw numerical data into a textual summary. In our case, however, we look at symbolic representations of content in the form of a DRS. Basile and Bos argue that DRSs are appropriate for all stages of the Bateman and Zock example\cite{basile2011towards}. Gardent and Kow have also proposed a symbolic approach to the Surface Realisation phase, working from first-order logic as the input form\cite{gardent2007symbolic}.
 
 In this paper, we will look at using DRSs to guide the content, i.e. the Macro Planning stage. However, we feel it is restrictive to use it for Micro Planning, since it gives no scope the use of symbolic imagery, or Surface Realisation, as it forces grammatical perfection.
 
