--- a/report/Evaluation/evaluation.tex
+++ b/report/Evaluation/evaluation.tex
@@ -22,11 +22,12 @@ Therefore, we propose a survey that asks for these three measures to be told tru
 
 Further, we plan to approach real poets from literary institutions and university departments and ask them to do this survey in person. If they incorrectly believe even one poem to be written by a human and not a computer, then this project is a definite success. For the cases where this does not arise, having an in-person survey will enable us to ask for feedback on what gave us away, which can be used to improve the system and future attempts at poetry generation.
 
-However, Pease and Colton 2011b make several arguments that Turing-style tests are not appropriate for poetry generation. We believe that it has its place because ultimately this project is for user consumption as well as research and experimentation. Furthermore, poems attempt to create an emotional connection with the reader, something that cannot be determined other than with a human reader.
+However, Pease and Colton\cite{pease2011impact} make several arguments that Turing-style tests are not appropriate for poetry generation. We believe that it has its place because ultimately this project is for user consumption as well as research and experimentation. Furthermore, poems attempt to create an emotional connection with the reader, something that cannot be determined other than with a human reader.
 
-Having said that, Colton, Charnley and Pease 2011 described the FACE and IDEA Descriptive Models for evaluating computational creativity projects. We believe these models provide a useful evaluation methodology alongside Turing-style tests and so are just as much part of the evaluation of this system as described in Section 4.3 and 4.4.
+Having said that, Colton, Charnley and Pease\cite{colton2011computational} described the FACE and IDEA Descriptive Models for evaluating computational creativity projects. We believe these models provide a useful evaluation methodology alongside Turing-style tests and so are just as much part of the evaluation of this system as described in Section \ref{sec:face} and \ref{sec:idea}. It will also be interesting to evaluate them as an evaluation method as they have only just been proposed.
 
 \section{FACE Descriptive Model}
+\label{sec:face}
 A full FACE model has four symptoms: examples, concepts, aesthetics and framing information.
 
 \begin{itemize}
@@ -37,9 +38,10 @@ A full FACE model has four symptoms: examples, concepts, aesthetics and framing 
 \item{\emph{Framing Information} is the poem created.}
 \end{itemize}
 
-Therefore, we can see that this system should fully abide by the FACE Descriptive Model. We will evaluate the results mathematically as per Colton, Charnley and Pease 2011.
+Therefore, we can see that this system should fully abide by the FACE Descriptive Model. We will evaluate the results mathematically as per Colton, Charnley and Pease.
 
 \section{IDEA Descriptive Model}
+\label{sec:idea}
 A full IDEA model has six stages to which the software can reach. We want our software to be in the, fourth or \emph{Discovery stage}.
 
 \begin{itemize}
@@ -51,7 +53,7 @@ A full IDEA model has six stages to which the software can reach. We want our so
 \item{\emph{Disruption and Disorientation stages}: Since templates and constraints on the creative work that are imposed are the results of analysing and abstracting existing works, it is not the case that this system solely produces poetry that is too dissimilar to those known by theory. }
 \end{itemize}
 
-Therefore, we can see that this system should reach the desired \emph{Discovery stage} of the IDEA Descriptive Model. We will evaluate the results mathematically as per Colton, Charnley and Pease 2011.
+Therefore, we can see that this system should reach the desired \emph{Discovery stage} of the IDEA Descriptive Model. We will evaluate the results mathematically as per Colton, Charnley and Pease.
 
 % ------------------------------------------------------------------------
 
