--- a/report/report.tex
+++ b/report/report.tex
@@ -34,7 +34,7 @@
 % insert below the file name that contains the crest in-place of 'UnivShield'
 % \crest{\IncludeGraphicsW{UnivShield}{40mm}{14 14 73 81}}
 %
-\renewcommand{\submittedtext}{A report for}
+\renewcommand{\submittedtext}{An interim report for}
 \degree{MEng Computing (AI)}
 \degreedate{Individual Project}
 
